# moon-lang

./: .gitignore  .mnproject  .prsmproject  Cargo.toml  LICENSE  Moon.sln  README.md  package-lock.json  run-blazetest-smoke.ps1  run-verification.ps1  unity-api-data.ts
crates/moonc/: Cargo.toml
crates/moonc/src/: driver.rs  hir.rs  lib.rs  main.rs  project.rs  project_graph.rs  project_index.rs  source_map.rs  where.rs
crates/moonc/src/ast/: mod.rs
crates/moonc/src/codegen/: emitter.rs  mod.rs  tests.rs
crates/moonc/src/lexer/: lexer.rs  token.rs
crates/moonc/src/lowering/: csharp_ir.rs  lower.rs
crates/moonc/src/parser/: parser.rs
crates/moonc/src/semantic/: analyzer.rs  scope.rs  types.rs
crates/moonc/tests/: cli_smoke.rs
crates/refraction/: Cargo.toml
crates/refraction/src/: debugger.rs  driver.rs  hir.rs  lib.rs  lsp.rs  lsp_support.rs  main.rs  project.rs  project_graph.rs  project_index.rs  refactor.rs  roslyn_sidecar_client.rs  roslyn_sidecar_protocol.rs  source_map.rs  where.rs
crates/refraction/src/ast/: mod.rs
crates/refraction/src/codegen/: emitter.rs  tests.rs
crates/refraction/src/diagnostics/: mod.rs  render.rs
crates/refraction/src/lexer/: lexer.rs  token.rs
crates/refraction/src/lowering/: burst.rs  csharp_ir.rs  lower.rs  mod.rs  optimizer.rs
crates/refraction/src/parser/: parser.rs
crates/refraction/src/semantic/: analyzer.rs  scope.rs  types.rs
crates/refraction/tests/: cli_smoke.rs
crates/refraction/wix/: License.rtf  main.wxs
docs/: _config.yml  architecture.md  language-goals.md  open-questions.md  (+3 more)
docs-landing/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+360 files in other folders)
