[package]
name = "moonc"
version = "0.1.0"
edition = "2021"
description = "Moon language compiler — Unity-first scripting language"

[[bin]]
name = "moonc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

[dev-dependencies]
