[package]
name = "refraction"
version = "3.5.0"
edition = "2021"
description = "Refraction compiler for PrSM — Unity-first scripting language"
license = "MIT"
repository = "https://github.com/29thnight/PrSM"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
lsp-server = "0.7"
url = "2"

[dev-dependencies]
